- Fixed bug #45691 (Some per-dir or runtime settings may leak into other     requests).